--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,3 @@
 ---
-# handlers file for ansible-role-OS-bootstrap
+- name: Generate RHEL7 new grub config
+  shell: grub2-mkconfig -o /etc/grub2.cfg
