--- a/tasks/Software/RedHat.yml
+++ b/tasks/Software/RedHat.yml
@@ -18,6 +18,8 @@
   yum:
     name: '{{ ",".join(vars["base_packages_" + ansible_os_family + "_" + ansible_distribution_major_version]) }}'
     state: 'present'
+    validate_certs: 'no'
+    disable_gpg_check: 'yes'
     update_cache: 'yes'
 
 - name: 'Remove the useless packages'
