--- a/tasks/Config/linux/RedHat/6/Grub.yml
+++ b/tasks/Config/linux/RedHat/6/Grub.yml
@@ -3,5 +3,5 @@
   replace:
     dest: '/etc/grub.conf'
     regexp: 'quiet'
-    replace: "{{ grub_add_args | join(' ') }}"
+    replace: "{{ os_linux_grub_add_args | join(' ') }}"
   register: grub
