--- a/tasks/Harden/linux/Password.yml
+++ b/tasks/Harden/linux/Password.yml
@@ -3,4 +3,4 @@
   user: 
     name: '{{ ansible_user }}'
     update_password: always
-    password: '{{ update_password |password_hash("sha512") }}'
+    password: '{{ os_update_password |password_hash("sha512") }}'
