--- a/tasks/Harden/windows/password.yml
+++ b/tasks/Harden/windows/password.yml
@@ -2,4 +2,4 @@
 - name: 'Local user password policy configuration'
   win_command: 'net accounts {{ item.value }}'
   with_items:
-    - '{{ local_user_pass_role }}'
+    - '{{ os_win_local_user_pass_role }}'
