--- a/tasks/Config/linux/Environment.yml
+++ b/tasks/Config/linux/Environment.yml
@@ -2,7 +2,7 @@
 - name: Copies the key from the user who is running ansible to the remote machine
   authorized_key:
     user: '{{ ansible_user }}'
-    key: '{{ id_rsa }}'
+    key: '{{ os_linux_id_rsa }}'
 
 - name: Ensure BASH log
   lineinfile:
@@ -34,7 +34,7 @@
     dest: /etc/postfix/main.cf
     regexp: '^inet_protocols ='
     line: 'inet_protocols = ipv4'
-  when: disable_linux_ipv6
+  when: os_disable_ipv6
 
 - name: Ensure NTP system events and so on is suppressed
   lineinfile:
@@ -79,7 +79,7 @@
     regexp: '{{ item.regexp }}'
     line: '{{ item.line }}'
   with_items:
-    - { regexp: '^relayhost =', line: 'relayhost = {{ MTA_relayhost }}' }
+    - { regexp: '^relayhost =', line: 'relayhost = {{ os_linux_MTA_relayhost }}' }
 
 - name: Configure terminal scheme
   lineinfile:
