--- a/tasks/Config/linux/linux.yml
+++ b/tasks/Config/linux/linux.yml
@@ -11,7 +11,14 @@
 - include: 'Timezone.yml'
 
 - include: '{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Grub.yml'
-  tags: grub
+
+- name: Ensure configuraion status file
+  copy:
+    src: 'bootstrap_Config.Succeed'
+    dest: '/etc/bootstrap_Config.Succeed'
+    owner: root
+    group: root
+    mode: 0644
 
 - name: Restart the host
   shell: sleep 2 && /sbin/shutdown -r now "Ansible system required"
