--- a/tasks/Config/windows/misc.yml
+++ b/tasks/Config/windows/misc.yml
@@ -6,20 +6,20 @@
     data: '{{ item.data }}'
     type: '{{ item.type }}'
   with_items:
-    - '{{ other_misc_role }}'
+    - '{{ os_win_misc_role }}'
 
 - name: Disable scheduled task
   win_command: powershell.exe -
   args:
     stdin: 'Get-ScheduledTask -TaskName "{{ item }}" | Disable-ScheduledTask'
   with_items:
-    - '{{ win_disable_task }}'
+    - '{{ os_win_disable_task }}'
 
 - name: Disable AutomaticManaged pagefile and set C pagefile
   win_pagefile:
     drive: 'C'
-    initial_size: '{{ win_pagefile_size }}'
-    maximum_size: '{{ win_pagefile_size }}'
+    initial_size: '{{ os_win_pagefile_size }}'
+    maximum_size: '{{ os_win_pagefile_size }}'
     remove_all: 'yes'
     automatic: 'no'
     state: 'present'
@@ -27,4 +27,4 @@
 #- name: Change Network Location to {{ win_network_location }}
 #  win_command: powershell.exe -
 #  args:
-#    stdin: 'Set-NetConnectionProfile -Name "Network" -NetworkCategory {{ win_network_location }}'
+#    stdin: 'Set-NetConnectionProfile -Name "Network" -NetworkCategory {{ os_win_network_location }}'
