--- a/tasks/Software/Win32NT.yml
+++ b/tasks/Software/Win32NT.yml
@@ -4,24 +4,24 @@
     name: '{{ item }}'
     state: 'present'
   with_items:
-    - '{{ win_roles }}'
+    - '{{ os_win_roles }}'
   ignore_errors: yes
 
 - name: 'Third party software installation'
   win_chocolatey:
     name: '{{ item }}'
     state: 'latest'
-    proxy_url: '{{ proxy_server|default(omit,true) }}'
+    proxy_url: '{{ os_proxy_server | default(omit,true) }}'
   with_items:
-    - '{{ win_software }}'
+    - '{{ os_win_software }}'
   ignore_errors: yes
 
 - name: Install security updates
   win_updates:
-    category_names: '{{ win_update_category }}'
+    category_names: '{{ os_win_update_category }}'
   ignore_errors: yes
 
 - name: Ensure update status file
   win_copy:
-    src: 'Init_Update.Succeed'
-    dest: 'c:\windows\Init_Update.Succeed'
+    src: 'bootstrap_Software.Succeed'
+    dest: 'c:\windows\bootstrap_Software.Succeed'
