--- a/vars/main.yml
+++ b/vars/main.yml
@@ -32,7 +32,7 @@ os_linux_kernel_parameters:
   - { variable: 'net.ipv4.tcp_tw_recycle', value: '0' }
   - { variable: 'net.ipv4.tcp_tw_reuse', value: '1' }
   - { variable: 'net.ipv4.tcp_window_scaling', value: '0' }
-  - { variable: "net.ipv6.conf.all.disable_ipv6', value: '{% if os_disable_ipv6 %}1{% else %}0{% endif %}'" }
+  - { variable: 'net.ipv6.conf.all.disable_ipv6', value: '{% if os_disable_ipv6 %}1{% else %}0{% endif %}' }
 
 # Windows variables
 os_win_local_user_pass_role:
